Trying to fix z-index problem on iOS

--- a/nodeserver/src/resources/sass/main.scss
+++ b/nodeserver/src/resources/sass/main.scss
@@ -165,16 +165,12 @@ a:active {
             width: 100%;
             span {
               position: absolute;
+              z-index: 1;
             }
             span.name {
               left: 6px;
               top: 5px;
               cursor: pointer;
-              -webkit-transform:translateZ(1px);
-              -moz-transform:translateZ(1px);
-              -o-transform:translateZ(1px);
-              transform:translateZ(1px);
-              z-index: 1;
             }
             span.name:hover {
               font-weight: 800;
